[package]
name = "winrm-rs"
version = "0.5.0"
edition = "2024"
rust-version = "1.94.0"
description = "Async WinRM (WS-Management) client for Rust with NTLMv2, Basic, Kerberos, and Certificate authentication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/muchini/winrm-rs"
keywords = ["winrm", "windows", "remote-management", "ntlm", "kerberos"]
categories = ["network-programming", "os::windows-apis"]
readme = "README.md"
documentation = "https://docs.rs/winrm-rs"
homepage = "https://github.com/muchini/winrm-rs"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
    "CHANGELOG.md",
]

[features]
default = []
kerberos = ["dep:cross-krb5"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots"] }
cross-krb5 = { version = "0.4", optional = true }
tokio = { version = "1", features = ["time", "macros"] }
base64 = "0.22"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
md4 = "0.11.0"
md-5 = "0.10"
hmac = "0.12"
rand = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
tracing = "0.1"
zeroize = "1.8"
tokio-util = { version = "0.7.18", features = ["rt"] }
rustls = { version = "0.23.37", features = ["ring"] }
sha2 = "0.11.0"
webpki-roots = "1.0.6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
serde_json = "1"
tracing-test = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
